context: Ensure msearch-port property exists before setting

Fix a typo that crashes gupnp_context_constructor() if msearch-port
property does not exist (it was added in gssdp 0.14.6).

https://bugzilla.gnome.org/show_bug.cgi?id=720372